# website

./: .gitignore  AgdaSort.lagda  LiterateAgda.hs  Makefile  cv.html  hakyll-agda.cabal  index.html  makepdf  plaintext.hs  push  site.hs  source.html  website.cabal
Hakyll/Web/: Agda.hs
b/: AgdaSort.agda  AgdaSort.lagda  Makefile  index.html  site.hs
b/articles/: 2011-02-07-youtubeplayer.html  AgdaSort.agda
b/css/: default.css
b/js/: style.js
b/posts/: haskell-readability.md
b/templates/: archive.html  default.html  post-item.html
css/: agda.css  default.css  fonts.css  index.css
cv/: cv.html  source.html
html/: AgdaSort.html
js/: style.js
posts/: #scala-syntax.md#  .#scala-syntax.md  AgdaSort.lagda  AgdaSort.lagda.metadata  AgdaSort2.lagda  AgdaSort2.lagda.metadata  Lambda.lagda  Lambda.lagda.metadata  agda-hakyll.md  deplambda.lhs  graph-drawing.lhs  haskell-readability.md  scala-syntax.md
templates/: default.html  post-item.html  post.html
wip/: AgdaSort2.lagda  Lambda.lagda
