Name:               website
Version:            0.0.0
Synopsis:           Personal website of Francesco Mazzoli
Description:        Personal website of Francesco Mazzoli
Homepage:           http://mazzo.li/
License:            AllRightsReserved
License-file:       LICENSE
Author:             Francesco Mazzoli
Maintainer:         f@mazzo.li
Copyright:          (C) 2012-2014 Francesco Mazzoli
Category:           Web
Build-type:         Simple
Cabal-version:      >= 1.8

Executable site
  Main-is:        site.hs
  Ghc-options:    -Wall

  Build-depends:
    base        >= 4.6,
    hakyll      >= 4.5,
    Agda        >= 2.4.2,
    hakyll-agda >= 0.1.7,
    pandoc      >= 1.12
